# r9

./: .codeclimate.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.defs  README  README.md  config.h.in  configure.ac
.github/actions/build-and-test/: action.yml
.github/workflows/: build-and-test.yml  codeql-analysis.yml
client/: Makefile  Makefile.am  TODO  about.c  cache.h  client.c  client.cc  client.h  client_core.cc  client_core.h  comm.c  comm.cc  comm.h  comm_dialog.cc  config.c  config.cc  config.h  configdata.cc  configdata.h  dtdresolver.h  geometry.c  geometry.cc  geometry.dtd  geometry.h  l10n.h  log_display.cc  log_display.h  logbuf.cc  logbuf.h  menu.c  object.cc  object.h  r9client.h  shader.cc  shader.h  test.cc  texture.c  texture.cc  texture.dtd  texture.h  (+1 more)
client/control/: Makefile.am  control.cc  control.h  joystick.cc  joystick.h  keyboard.cc  keyboard.h  spacemouse.cc  spacemouse.h
client/geometry/: 0000000000000000.xml  Makefile.am
client/motif/: Makefile  Makefile.am  about.c  about.cc  client.cc  client.h  command.c  menu.c  menu.cc  message.c  message.cc  msglog.cc  msglog.h  setup.c  setup.cc  view.c  view.cc
client/motif/app-defaults/: Makefile.am  R9
client/motif/app-defaults/en_US.UTF-8/: R9
client/osx/r9/: main.m  r9AppDelegate.h  r9AppDelegate.m
client/osx/r9.xcodeproj/: project.pbxproj
client/osx/r9.xcodeproj/project.xcworkspace/xcuserdata/tquirk.xcuserdatad/: UserInterfaceState.xcuserstate
client/osx/r9/Base.lproj/: MainMenu.xib
client/osx/r9Tests/: r9Tests.m
client/pixmaps/: Makefile.am  about00.xpm  about01.xpm  about02.xpm  about03.xpm  about04.xpm  about05.xpm  about06.xpm  about07.xpm  about08.xpm  about09.xpm  about10.xpm  about11.xpm
client/r9/r9/: r9-Info.plist
client/r9/r9.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
client/r9/r9.xcodeproj/project.xcworkspace/xcuserdata/tquirk.xcuserdatad/: UserInterfaceState.xcuserstate
client/r9/r9Tests/: r9Tests-Info.plist
client/shaders/: Makefile.am  fragment.glsl  geometry.glsl  ui_fragment.glsl  ui_vertex.glsl  vertex.glsl
client/texture/: 0000000000000000.xml  Makefile.am
client/ui/: button.cc  composite.cc  composite.h  label.cc  manager.cc  multi_label.cc  password.cc  pie_menu.cc  row_column.cc  text_field.cc  ui.cc  ui_defs.h  widget.h
doc/: proto.md
glw/: GLwDrawA.c  GLwDrawA.h  GLwDrawAP.h  Makefile.am  aclocal.m4  configure  configure.ac
glw/m4/: .gitkeep
m4/: ax_search_libs_prog.m4  intl.m4
po/: .gitignore  ChangeLog  Makevars  POTFILES.in  r9.pot
proto/: Makefile  Makefile.am  byteswap.c  byteswap.h  dh.c  dh.h  ec.c  ec.h  encrypt.c  encrypt.h  key.c  key.h  proto.h
server/: Makefile  Makefile.am  README  README.process  TODO  config.c  config.cc  config.h  config_data.cc  config_data.h  defaults.h  log.cc  log.h  server.c  server.cc  server.h  signals.c  signals.cc  signals.h  subserver.c  subserver.cc  subserver.h
server/classes/: Makefile  Makefile.am  README  SEQUENCE  access.cc  action.cc  action.h  action_pool.cc  action_pool.h  addrinfo.h  basesock.cc  basesock.h  config_data.cc  config_data.h  console.cc  console.h  control.cc  control.h  defs.h  dgram.cc  dgram.h  fdstreambuf.h  game_obj.cc  game_obj.h  geometry.cc  geometry.h  library.cc  library.h  listensock.cc  listensock.h  log.cc  log.h  motion.cc  motion.h  motion_pool.cc  motion_pool.h  motion_worker.cc  octree.cc  octree.h  polygon.cc  (+17 more)
server/classes/actions/: Makefile  Makefile.am  control_object.cc  move.cc  register.cc  register.h
server/classes/modules/: Makefile  Makefile.am  README  README.database  console.cc  console.h  db.cc  db.h  fdstreambuf.h  inet_console.cc  language.cc  language.h  mysql.cc  mysql.h  mysql.sql  mysql_db.cc  mysql_db.h  perl.c  perl.cc  perl.h  pgsql.cc  pgsql.h  pgsql.sql  r9lua.cc  r9lua.h  r9mysql.cc  r9mysql.h  r9perl.h  r9pgsql.cc  r9pgsql.h  r9python.cc  r9python.h  r9tcl.cc  r9tcl.h  tcl.c  tcl.cc  tcl.h  unix_console.cc
test/: .gitignore  Makefile.am  libtest.cc  libtest.h  mock_base_user.h  mock_db.h  mock_library.h  mock_listensock.h  mock_server_globals.h  mock_zone.h  t_action_pool.cc  t_addrinfo.cc  t_basesock.cc  t_byteswap.cc  t_cache.cc  t_comm.cc  t_comm_exception.cc  t_config_data.cc  t_configdata.cc  t_console.cc  t_control.cc  t_db.cc  t_dgram.cc  t_dgram_worker.cc  t_dh.cc  t_dh_exception.cc  t_ec.cc  t_encrypt.cc  t_font.cc  t_game_obj.cc  t_geometry.cc  t_image.cc  t_key.cc  t_library.cc  t_listensock.cc  t_listensock_worker.cc  t_log.cc  t_logbuf.cc  t_lua.cc  t_motion_pool.cc  (+19 more)
test/gmock-1.7.0/: .gitignore  Makefile.am  configure.ac
test/gmock-1.7.0/gtest/: Makefile.am  configure.ac
util/: Makefile.am  r9_keygen.cc
xerces-c/: .gitignore  aclocal.m4  config.h.in  configure
